fix content panel spacing on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -79,7 +79,6 @@ body{
             display: flex;
             flex-direction: column;
             align-items:center;
-            margin-top: 40px;
             .mainpanel{
                 margin-top: 40px;
                 text-align: center;
@@ -289,7 +288,7 @@ hr{
     align-items:center;
     text-align: center;
     width: 100%;
-    margin-top: 200px;
+    margin-top: 2000px;
     margin-left: 40px;
     margin-right: 40px;
     border-radius: 0.5em;
@@ -297,7 +296,7 @@ hr{
     .topPlayTitle{
         display: flex;
         justify-content: center;
-        padding-top: 30px;
+        padding: 30px;
         font-size: 20px;
     }
 }
